kasane-plugin-sdk/tests/fail/define_plugin_update.rs
kasane_plugin_sdk::define_plugin! {
    id: "bad_update",

    update(payload) {
        let _ = payload;
        Effects::default()
    },
}

fn main() {}
