kasane-plugin-sdk/tests/fail/define_plugin_update.stderr
error: define_plugin! `update` was removed; use `update_effects(...)`
 --> tests/fail/define_plugin_update.rs:4:5
  |
4 |     update(payload) {
  |     ^^^^^^
